--- a/nginx-sites/miscweb-php5.6
+++ b/nginx-sites/miscweb-php5.6
@@ -1,9 +1,9 @@
-upstream container-wordpress { server 127.0.0.1:2080; }
+upstream container-php5 { server 127.0.0.1:4080; }
 server {
   listen      80;
-  server_name www.aquarionics.com aquarionics.com factionfiction.net www.factionfiction.net blogs.water.gkhs.net *.blogs.water.gkhs.net;
+  server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net;
   location    / {
-    proxy_pass  http://container-wordpress;
+    proxy_pass  http://container-php5;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
@@ -14,12 +14,12 @@ server {
 
 server {
     listen              443 ssl;
-    server_name www.aquarionics.com aquarionics.com factionfiction.net www.factionfiction.net blogs.water.gkhs.net *.blogs.water.gkhs.net;
+    server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net;
     ssl_certificate /etc/letsencrypt/live/www.aquarionics.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/www.aquarionics.com/privkey.pem;
 
   location    / {
-    proxy_pass  http://container-wordpress;
+    proxy_pass  http://container-php5;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
