--- a/ansible/roles/archipelago-nginx/templates/vhosts/miscweb-php5.6
+++ b/ansible/roles/archipelago-nginx/templates/vhosts/miscweb-php5.6
@@ -17,6 +17,8 @@ server {
     server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net;
     ssl_certificate /etc/letsencrypt/live/aquarionics.blogs.water.gkhs.net/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/aquarionics.blogs.water.gkhs.net/privkey.pem;
+    ssl_session_cache    shared:SSL:1m;
+    ssl_session_timeout  10m;
 
   location    / {
     proxy_pass  http://container-php5;
