--- a/ansible/roles/archipelago-nginx/templates/vhosts/miscweb-php5.6
+++ b/ansible/roles/archipelago-nginx/templates/vhosts/miscweb-php5.6
@@ -1,7 +1,7 @@
 upstream container-php5 { server 127.0.0.1:4080; }
 server {
   listen      80;
-  server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net;
+  server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net warehousebasement.com dagon.church;
   location    / {
     proxy_pass  http://container-php5;
     proxy_http_version 1.1;
@@ -13,10 +13,15 @@ server {
 }
 
 server {
+    server_name www.warehousebasement.com;
+    return 301 $scheme://warehousebasement.com$request_uri;
+}
+
+server {
     listen              443 ssl;
-    server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net;
-    ssl_certificate /etc/letsencrypt/live/aquarionics.blogs.water.gkhs.net/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/aquarionics.blogs.water.gkhs.net/privkey.pem;
+    server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net warehousebasement.com dagon.church;
+    ssl_certificate {{ letsencrypt_dir }}/fullchain.pem;
+    ssl_certificate_key {{ letsencrypt_dir }}/privkey.pem;
     ssl_session_cache    shared:SSL:1m;
     ssl_session_timeout  10m;
 
