--- a/ansible/roles/archipelago-nginx/templates/vhosts/4_miscweb-php5.6
+++ b/ansible/roles/archipelago-nginx/templates/vhosts/4_miscweb-php5.6
@@ -1,7 +1,7 @@
 upstream container-php5 { server 127.0.0.1:4080; }
 server {
   listen      80;
-  server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net warehousebasement.com dagon.church live.dagon.church archipelago.water.gkhs.net casu.istic.net wildfeathers.casu.istic.net istic.casu.istic.net;
+  server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net warehousebasement.com dagon.church live.dagon.church archipelago.water.gkhs.net casu.istic.net wildfeathers.casu.istic.net istic.casu.istic.net hol.istic.net; 
   location    / {
     proxy_pass  http://container-php5;
     proxy_http_version 1.1;
@@ -25,7 +25,7 @@ server {
 
 server {
     listen              443 ssl;
-    server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net warehousebasement.com dagon.church live.dagon.church archipelago.water.gkhs.net casu.istic.net wildfeathers.casu.istic.net istic.casu.istic.net;
+    server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net warehousebasement.com dagon.church live.dagon.church archipelago.water.gkhs.net casu.istic.net wildfeathers.casu.istic.net istic.casu.istic.net hol.istic.net;
     include /etc/nginx/snippets/letsencrypt.conf;
 
   location    / {
