--- a/ansible/roles/archipelago-nginx/templates/vhosts/4_miscweb-php5.6
+++ b/ansible/roles/archipelago-nginx/templates/vhosts/4_miscweb-php5.6
@@ -1,30 +1,15 @@
 upstream container-php5 { server 127.0.0.1:4080; }
 server {
   listen      80;
+  listen [::]:80;
   server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net warehousebasement.com dagon.church live.dagon.church archipelago.water.gkhs.net casu.istic.net wildfeathers.casu.istic.net istic.casu.istic.net hol.istic.net diaspora.foip.me; 
-  location    / {
-    proxy_pass  http://container-php5;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_set_header Host $http_host;
-    proxy_set_header X-Forwarded-For $remote_addr;
-  }
-  include /etc/nginx/snippets/errors.conf;
+  
+  return 301 https://$host$request_uri;
 }
 
 server {
-    server_name www.warehousebasement.com;
-    return 301 $scheme://warehousebasement.com$request_uri;
-}
-
-server {
-    server_name www.istic.net;
-    return 301 $scheme://istic.net$request_uri;
-}
-
-server {
-    listen              443 ssl;
+    listen 443 ssl;
+    listen [::]:443 ssl;
     server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net warehousebasement.com dagon.church live.dagon.church archipelago.water.gkhs.net casu.istic.net wildfeathers.casu.istic.net istic.casu.istic.net hol.istic.net diaspora.foip.me;
     include /etc/nginx/snippets/letsencrypt.conf;
 
