--- a/ansible/roles/archipelago-nginx/templates/vhosts/4_miscweb-php5.6
+++ b/ansible/roles/archipelago-nginx/templates/vhosts/4_miscweb-php5.6
@@ -1,8 +1,8 @@
-upstream container-php5 { server 127.0.0.1:4080; }
+upstream container-php { server 127.0.0.1:4080; }
 server {
   listen      80;
   listen [::]:80;
-  server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net warehousebasement.com dagon.church live.dagon.church wiki.dagon.church archipelago.water.gkhs.net casu.istic.net wildfeathers.casu.istic.net istic.casu.istic.net hol.istic.net diaspora.foip.me; 
+  server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net warehousebasement.com dagon.church live.dagon.church wiki.dagon.church archipelago.water.gkhs.net casu.istic.net wildfeathers.casu.istic.net istic.casu.istic.net hol.istic.net diaspora.foip.me old.aquarionics.com; 
   
   return 301 https://$host$request_uri;
 }
@@ -10,11 +10,11 @@ server {
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
-    server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net warehousebasement.com dagon.church live.dagon.church wiki.dagon.church archipelago.water.gkhs.net casu.istic.net wildfeathers.casu.istic.net istic.casu.istic.net hol.istic.net diaspora.foip.me; 
+    server_name imperial.istic.net altru.istic.net ark.ludo.istic.net live.art.istic.net material.istic.net warehousebasement.com dagon.church live.dagon.church wiki.dagon.church archipelago.water.gkhs.net casu.istic.net wildfeathers.casu.istic.net istic.casu.istic.net hol.istic.net diaspora.foip.me old.aquarionics.com; 
     include /etc/nginx/snippets/letsencrypt.conf;
 
   location    / {
-    proxy_pass  http://container-php5;
+    proxy_pass  http://container-php;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
